syntax = "proto3";

package manga;

option go_package = "github.com/binhbb2204/Manga-Hub-Group13/proto/manga";

service MangaService {
    rpc GetManga(GetMangaRequest) returns (MangaResponse);
    rpc SearchManga(SearchRequest) returns (SearchResponse);
    rpc UpdateProgress(ProgressRequest) returns (ProgressResponse);
}

message GetMangaRequest {
    string id = 1;
}

message MangaResponse {
    string id = 1;
    string title = 2;
    string author = 3;
    repeated string genres = 4;
    string status = 5;
    int32 total_chapters = 6;
    string description = 7;
}

message SearchRequest {
    string query = 1;
    repeated string genres = 2;
    int32 limit = 3;
    int32 offset = 4;
}

message SearchResponse {
    repeated MangaResponse mangas = 1;
    int32 total_count = 2;
}

message ProgressRequest {
    string user_id = 1;
    string manga_id = 2;
    int32 chapter = 3;
}

message ProgressResponse {
    bool success = 1;
    string message = 2;
}
